MOBAPP-1510 worked on sync

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>io.interface21.tools.intellij.installer</artifactId>
     <version>1.0</version>
     <name>${project.groupId} :: ${project.artifactId}-${project.version}</name>
-    <description>This project builds an installer that builds a personalized IntelliJ project setting file.</description>
+    <description>This project creates an installer that builds a personalized IntelliJ project setting file.</description>
 
     <inceptionYear>2016</inceptionYear>
 
@@ -71,12 +71,6 @@
         <dependency>
             <groupId>org.codehaus.izpack</groupId>
             <artifactId>izpack-standalone-compiler</artifactId>
-            <version>${izpack.standalone.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.codehaus.izpack</groupId>
-            <artifactId>izpack-api</artifactId>
             <version>${izpack.standalone.version}</version>
         </dependency>
     </dependencies>
